# DeepShit

./: .gitignore  Cargo.toml  LICENSE  Readme.md
deepshit/: Cargo.toml
deepshit/src/: lib.rs
src/: lib.rs
test_record/: Cargo.toml
test_record/src/: main.rs
test_shit/: Cargo.toml
test_shit/src/: main.rs
