
[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
build = false
description = "A procedural macro to derive record-like structs with getters and constructor"
edition = "2024"
license = "MIT"
name = "jrecord_derive"
readme = false
version = "0.1.0"

[dependencies.quote]
version = "1"

[dependencies.syn]
features = ["full"]
version = "2"

[lib]
name = "jrecord_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
reqwest = { version = "0.13.2", features = ["rustls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
