
[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
build = false
description = "基于法学硕士与铁锈过程宏实现的自动样板代码生成"
edition = "2024"
license = "WTFPL"
name = "deepshit"
readme = false
version = "0.1.0"

[dependencies.quote]
version = "1"

[dependencies.syn]
features = ["full"]
version = "2"

[lib]
name = "deepshit"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
reqwest = { version = "0.13.2", features = ["rustls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
